// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "solarmesh.io/mockservices/src/grpc/example/pkg/proto/user";
// target package name
package user;

// The mock service definition.
service DeleteService {
  // Sends a greeting
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}

}

// The request message containing the user's name.
message DeleteRequest {
  string Uuid = 1;
}


// The response message containing the greetings
message DeleteResponse {
  int32 code = 1;
  string message = 2;
}
